--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dropzone": "^11.4.2",
     "react-papaparse": "^3.17.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.42.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
